--- a/pages/meInfo/meInfo.wxss
+++ b/pages/meInfo/meInfo.wxss
@@ -7,8 +7,8 @@
   align-items: center;
 }
 .labelFont {
-  font-size: 1em;
-  color: #000;
+  font-size: 0.92em;
+  color: #3c3c3c;
 }
 
 .addPictureBox {
