--- a/pages/wanted/wanted.wxss
+++ b/pages/wanted/wanted.wxss
@@ -9,3 +9,13 @@
 .noteBox {
   margin: 20rpx 0;
 }
+.pullDown {
+  padding:10rpx 40rpx 25rpx 40rpx;
+  font-size: 0.9em;
+  color: #2c2c2c;
+}
+.switchIcon {
+  width: 34rpx;
+  height: 34rpx;
+  margin-right: 7rpx;
+}
